WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
173062
Laili restaurant menu page does not display full menu in Safari (works in Chrome and Firefox)
https://bugs.webkit.org/show_bug.cgi?id=173062
Summary
Laili restaurant menu page does not display full menu in Safari (works in Chr...
Dave Hyatt
Reported
2017-06-07 09:50:44 PDT
Laili restaurant menu page does not display full menu in Safari (works in Chrome and Firefox).
Attachments
Patch
(7.10 KB, patch)
2017-06-07 09:56 PDT
,
Dave Hyatt
simon.fraser
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews103 for mac-elcapitan
(1.16 MB, application/zip)
2017-06-07 10:57 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews112 for mac-elcapitan
(2.04 MB, application/zip)
2017-06-07 11:00 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews106 for mac-elcapitan-wk2
(1.23 MB, application/zip)
2017-06-07 11:03 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews125 for ios-simulator-wk2
(1.04 MB, application/zip)
2017-06-07 11:24 PDT
,
Build Bot
no flags
Details
Patch
(10.44 MB, patch)
2017-06-07 13:19 PDT
,
Dave Hyatt
no flags
Details
Formatted Diff
Diff
Patch
(10.54 KB, patch)
2017-06-07 13:29 PDT
,
Dave Hyatt
simon.fraser
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews124 for ios-simulator-wk2
(15.63 MB, application/zip)
2017-06-07 14:42 PDT
,
Build Bot
no flags
Details
Show Obsolete
(6)
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2017-06-07 09:56:29 PDT
Created
attachment 312193
[details]
Patch
Build Bot
Comment 2
2017-06-07 09:59:09 PDT
Attachment 312193
[details]
did not pass style-queue: ERROR: Source/WebCore/rendering/RenderBox.h:671: The parameter name "sizeType" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 3
2017-06-07 10:04:22 PDT
Comment on
attachment 312193
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=312193&action=review
> Source/WebCore/ChangeLog:9 > + Added fast/replaced/max-height-percent-inside-auto-block.html
Usually this is like: Test: fast/replaced/max-height-percent-inside-auto-block.html and comes after the comment. prepare-ChangeLog does this for you.
> Source/WebCore/rendering/RenderBox.cpp:3155 > + if (!replacedMinMaxLogicalHeightComputesAsNone(MinSize)) > + minLogicalHeight = computeReplacedLogicalHeightUsing(MinSize, style().logicalMinHeight()); > + LayoutUnit maxLogicalHeight = logicalHeight; > + if (!replacedMinMaxLogicalHeightComputesAsNone(MaxSize)) > + maxLogicalHeight = computeReplacedLogicalHeightUsing(MaxSize, style().logicalMaxHeight());
Seems like we'll call containingBlockForAutoHeightDetection() twice via this coe and usually find the same containingBlock? Can we optimize to call it only once?
> Source/WebCore/rendering/RenderBox.h:671 > + bool replacedMinMaxLogicalHeightComputesAsNone(SizeType sizeType) const;
You can remove the parameter name (style bot will probably tell you).
Build Bot
Comment 4
2017-06-07 10:57:06 PDT
Comment on
attachment 312193
[details]
Patch
Attachment 312193
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/3888683
New failing tests: fast/multicol/pagination/RightToLeft-max-width.html fast/hidpi/percent-height-image-nested.html
Build Bot
Comment 5
2017-06-07 10:57:07 PDT
Created
attachment 312199
[details]
Archive of layout-test-results from ews103 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 6
2017-06-07 11:00:19 PDT
Comment on
attachment 312193
[details]
Patch
Attachment 312193
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/3888643
New failing tests: fast/multicol/pagination/RightToLeft-max-width.html fast/hidpi/percent-height-image-nested.html
Build Bot
Comment 7
2017-06-07 11:00:20 PDT
Created
attachment 312200
[details]
Archive of layout-test-results from ews112 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews112 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 8
2017-06-07 11:03:24 PDT
Comment on
attachment 312193
[details]
Patch
Attachment 312193
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/3888687
New failing tests: fast/multicol/pagination/RightToLeft-max-width.html fast/hidpi/percent-height-image-nested.html
Build Bot
Comment 9
2017-06-07 11:03:25 PDT
Created
attachment 312201
[details]
Archive of layout-test-results from ews106 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Build Bot
Comment 10
2017-06-07 11:24:46 PDT
Comment on
attachment 312193
[details]
Patch
Attachment 312193
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/3888725
New failing tests: fast/multicol/pagination/RightToLeft-max-width.html
Build Bot
Comment 11
2017-06-07 11:24:47 PDT
Created
attachment 312203
[details]
Archive of layout-test-results from ews125 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews125 Port: ios-simulator-wk2 Platform: Mac OS X 10.12.5
Dave Hyatt
Comment 12
2017-06-07 13:19:06 PDT
Created
attachment 312216
[details]
Patch
Dave Hyatt
Comment 13
2017-06-07 13:29:23 PDT
Created
attachment 312217
[details]
Patch
Simon Fraser (smfr)
Comment 14
2017-06-07 13:33:06 PDT
Comment on
attachment 312217
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=312217&action=review
> Source/WebCore/ChangeLog:11 > + properly. min-max-height were not handled properly though and need to do the same check.
Say something about iBooks here? Can we test the iBooks behavior?
> Source/WebCore/rendering/RenderBox.cpp:3130 > +static bool isRequestFromIBooks()
This should be called useReplacePercentageHeightAutoContainerQuirk() or something. There should be a comment with a radar number, for a radar on iBooks that tracks their fixing the content to not need this quirk in future.
> Source/WebCore/rendering/RenderBox.cpp:3155 > + return isRequestFromIBooks() ? false : cb->hasAutoHeightOrContainingBlockWithAutoHeight();
You can return false before this block for iBooks, since both return values are false here and below.
Build Bot
Comment 15
2017-06-07 14:42:09 PDT
Comment on
attachment 312217
[details]
Patch
Attachment 312217
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/3889714
New failing tests: fast/multicol/pagination/RightToLeft-max-width.html
Build Bot
Comment 16
2017-06-07 14:42:11 PDT
Created
attachment 312234
[details]
Archive of layout-test-results from ews124 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews124 Port: ios-simulator-wk2 Platform: Mac OS X 10.12.5
Dave Hyatt
Comment 17
2017-06-08 13:07:14 PDT
Fixed in
r217943
. I converted the column failure into a reftest.
Darin Adler
Comment 18
2017-06-09 11:58:21 PDT
Comment on
attachment 312217
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=312217&action=review
>> Source/WebCore/rendering/RenderBox.cpp:3130 >> +static bool isRequestFromIBooks() > > This should be called useReplacePercentageHeightAutoContainerQuirk() or something. > > There should be a comment with a radar number, for a radar on iBooks that tracks their fixing the content to not need this quirk in future.
I would have stuck the inline keyword on this function.
Karl Dubost
Comment 19
2024-10-14 18:46:52 PDT
Adding the information about this initial bug here.
http://lailirestaurant.com/menu/
fails to show the full menu in Safari. 1. Load
http://lailirestaurant.com/menu/
2. Scroll down 3. There's nothing below Salads in Safari. Chrome shows Wraps and Flatbreads To assess if it is still needed.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug